--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npx prisma migrate deploy",
     "start": "next start",
-    "lint": "next lint"
+    "migrate": "npx prisma migrate dev",
+    "test": "docker-compose up -d test_postgres && jest && docker-compose down --volumes"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.1",
     "next": "15.0.4",
+    "pg": "^8.13.1",
+    "prisma": "^6.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "shadcdn": "^0.0.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -26,6 +32,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
