--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       DATABASE_URL: 'postgresql://devuser:devpassword@postgres:5432/devdb'
     depends_on:
       - postgres
+    volumes:
+      - .:/app
 
   migrate:
     build:
